remove redundant tags

--- a/src/views/player.ejs
+++ b/src/views/player.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/homepage.css">
 <div class="footer-player">
     <div class="current-song">Listening on ASUS-ROG...</div>
     <div class="player-controls">
