Add name attribute for register inputs

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -22,9 +22,9 @@
                     <a href="#" class="icons"><i class='bx bxl-linkedin'></i></a>
                 </div>
                 <span>Register with E-mail</span>
-                <input type="text" placeholder="Name" required>
-                <input type="email" placeholder="Enter E-mail" required>
-                <input type="password" placeholder="Enter Password" required>
+                <input type="text" placeholder="Name" name="user_name" required>
+                <input type="email" placeholder="Enter E-mail" name="user_email" required>
+                <input type="password" placeholder="Enter Password" name="user_password" required>
                 <button type="submit">Sign Up</button>
             </form>
         </div>
