--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -13,7 +13,7 @@
     <div class="container" id="container">
         <!-- Sign Up Form -->
         <div class="form-container sign-up">
-            <form action="/register" method="POST">
+            <form action="/api/register" method="POST">
                 <h1>Create Account</h1>
                 <div class="social-icons">
                     <a href="#" class="icons"><i class='bx bxl-google'></i></a>
@@ -23,7 +23,8 @@
                 </div>
                 <span>Register with E-mail</span>
                 <input type="text" placeholder="Name" name="user_name" required>
-                <input type="email" placeholder="Enter E-mail" name="user_email" required>
+                <input type="email" placeholder="Enter E-mail" name="user_email" id="register_email" required>
+                <span id="register-email-error" style="color: red; margin-top: 10px;"></span>
                 <input type="password" placeholder="Enter Password" name="user_password" required>
                 <button type="submit">Sign Up</button>
             </form>
