--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -13,7 +13,7 @@
     <div class="container" id="container">
         <!-- Sign Up Form -->
         <div class="form-container sign-up">
-            <form action="/api/register" method="POST">
+            <form action="/register" method="POST">
                 <h1>Create Account</h1>
                 <div class="social-icons">
                     <a href="#" class="icons"><i class='bx bxl-google'></i></a>
@@ -42,8 +42,9 @@
                     <a href="#" class="icons"><i class='bx bxl-linkedin'></i></a>
                 </div>
                 <span>Login With Email & Password</span>
-                <input type="email" placeholder="Enter E-mail" required>
-                <input type="password" placeholder="Enter Password" required>
+                <input type="email" placeholder="Enter E-mail" name="login_email" required>
+                <input type="password" placeholder="Enter Password" name="login_password" required>
+                <span id="login-error" style="color: red; margin-top: 10px;"></span>
                 <a href="#">Forget Password?</a>
                 <button type="submit">Sign In</button>
             </form>
