Add sample music player

--- a/src/views/player.ejs
+++ b/src/views/player.ejs
@@ -1,6 +1,9 @@
 <link rel="stylesheet" href="/css/homepage.css">
 <div class="footer-player">
     <div class="current-song">Listening on ASUS-ROG...</div>
+        <audio controls>
+            <source src="/music/sample.mp3" type="audio/mp3">
+        </audio>
     <div class="player-controls">
         <button>Play</button>
         <button>Pause</button>
