--- a/src/views/navbar.ejs
+++ b/src/views/navbar.ejs
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="/css/navbar.css">
 <h1>Hello this is navbar.</h1>
 <ul id="navbar">
-    <li><a href="/">Home</a></li>
-    <li><a href="/artists">Artists</a></li>
-    <li><a href="/tracks">Tracks</a></li>
+    <li><a class="nav-link" href="/">Home</a></li>
+    <li><a class="nav-link" href="/artists">Artists</a></li>
+    <li><a class="nav-link" href="/tracks">Tracks</a></li>
     <li><a href="/profile">Profile</a></li>
 </ul>
 
