--- a/src/views/navbar.ejs
+++ b/src/views/navbar.ejs
@@ -1,18 +1,23 @@
 <link rel="stylesheet" href="/css/navbar.css">
 <style>
     #navbar {
-        /* overflow: hidden; */
-        /* background-color: #333; */
-        /* font-family: Arial, Helvetica, sans-serif; */
+        overflow: hidden; 
+        background-color: #30267b;
+        font-family: Arial, Helvetica, sans-serif;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
     }
 
     #navbar > li > a {
         float: left;
         font-size: 16px;
         text-align: center;
-        /* color: white; */
-        /* padding: 14px 16px; */
-        /* text-decoration: none; */
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
     }
 
     .dropdown {
@@ -21,67 +26,117 @@
     }
 
     .dropdown .dropbtn {
+        display: flex;
+        align-items: center;
+        gap: 8px;
         cursor: pointer;
-        /* font-size: 16px; */
-        /* border: none; */
-        /* outline: none; */
-        /* color: white; */
-        /* padding: 14px 16px; */
-        /* background-color: inherit; */
-        /* font-family: inherit; */
-        /* margin: 0; */
+        font-size: 14px;
+        border: none;
+        outline: none;
+        color: white;
+        background-color: #0a0a0a;
+        font-family: inherit;
+        margin: 0;
+        padding-right: 15px;
+        border-radius: 30px;
+        max-width: 200px;
+        min-width: 10px;
+        margin-right: 30px;
+    }
+    #avatar{
+        width: 40px !important;
+        min-width: 40px !important;
+        height: 40px;
+        border-radius: 50%;
     }
 
-    #navbar a:hover,
-    .dropdown:hover .dropbtn,
-    .dropbtn:focus {
-        /* background-color: red; */
+    #avatar + span{
+        line-height: 30px;
+        text-align: center;
+        height: 30px;
+        margin-top: 5px;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
-
+    
     .dropdown-content {
         display: none;
         position: absolute;
         z-index: 3;
-        /* background-color: #f9f9f9; */
-        /* min-width: 160px; */
-        /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
+        background-color: #f9f9f9;
+        min-width: 130px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        border-radius: 5px;
     }
 
     .dropdown-content a {
         float: none;
         display: block;
-        /* color: black; */
-        /* padding: 12px 16px; */
-        /* text-decoration: none; */
-        /* text-align: left; */
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        text-align: left;
     }
 
     .dropdown-content a:hover {
-        /* background-color: #ddd; */
+        background-color: #ddd;
     }
 
     .show {
         display: block;
     }
+    
+    .navbar-left{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .navbar-left > div{
+        display: inline-block;
+    }
+
+    .nav-button {
+        padding: 10px 15px;
+        background-color: #131313;
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 25px;
+    }
+
+    .nav-button:hover {
+        background-color: #555;
+    }
 </style>
-<h1>Hello this is navbar.</h1>
-<ul id="navbar">
-    <li><a class="nav-link" href="/">Home</a></li>
-    <li><a class="nav-link" href="/artists">Artists</a></li>
-    <li><a class="nav-link" href="/tracks">Tracks</a></li>
-    <li>
-        <div class="dropdown">
-            <button class="dropbtn" onclick="dropdown()">Dropdown
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content" id="dropdown-profile">
-                <a href="#">Account</a>
-                <a href="#">Profile</a>
-                <a href="#">Logout</a>
-            </div>
+<div id="navbar">
+    <div class="navbar-left">
+        <div class="logo">
+            <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
         </div>
-    </li>
-</ul>
+        <div class="navbar-buttons">
+            <button class="nav-button" onclick="window.location.href='./index.html'">
+                <i class="bi bi-arrow-left-circle"></i>
+            </button>
+            <button class="nav-button" onclick="history.forward()">
+                <i class="bi bi-arrow-right-circle"></i>
+            </button>
+        </div>
+    </div>
+    <div class="dropdown navbar-right">
+        <button class="dropbtn" onclick="dropdown()">
+            <img src="/images/profile-pic.jpg" alt="avatar" id="avatar">
+            <span class="username">Username</span>
+        </button>
+        <div class="dropdown-content" id="dropdown-profile">
+            <a href="#">Account</a>
+            <a href="#">Profile</a>
+            <a href="#">Logout</a>
+        </div>
+    </div>
+
+</div>
 
 <script>
     /* When the user clicks on the button, 
