--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -1,36 +1,14 @@
 <link rel="stylesheet" href="/css/homepage.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-<div class="container">
+<div class="homepage-container">
 
     <!-- Main Content Section -->
     <div class="main-content">
         <div class="top-header">
             <div class="header-left">
-                <button class="nav-button" onclick="window.location.href='./index.html'">
-                    <i class="bi bi-arrow-left-circle"></i>
-                </button>
-                <button class="nav-button" onclick="history.forward()">
-                    <i class="bi bi-arrow-right-circle"></i>
-                </button>
-                <h1>Welcome, L&S</h1>
-            </div>
-
-            <div class="header-right">
-                <div class="user-profile" onclick="toggleDropdown()">
-                    <div class="avatar">
-                        <img src="/images/profile-pic.jpg" alt="User Avatar">
-                    </div>
-                    <div class="dropdown-menu">
-                        <div class="profile-info">
-                            <img src="/images/profile-pic.jpg" alt="User Avatar">
-                            <span>Angel</span>
-                        </div>
-                        <a href="#">Account</a>
-                        <a href="#">Profile</a>
-                        <a href="#">Log out</a>
-                    </div>
-                </div>
+                
+                <h1>Welcome, username</h1>
             </div>
         </div>
 
