--- a/src/public/css/homepage.css
+++ b/src/public/css/homepage.css
@@ -90,7 +90,7 @@ html {
 /* Top Header that spans full width but not affecting the sidebar */
 .top-header {
 	position: relative;
-	background-color: #f4f4f4;
+	background-color: var(--main-bg-color);
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -209,10 +209,18 @@ html {
 	min-width: 200px;
 	margin-right: 15px;
 	text-align: center;
-	background-color: #fff;
 	border-radius: 8px;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 	transition: transform 0.2s;
+	color: var(--main-text-color);
+}
+
+.playlist-card {
+	background-color: var(--card-color-light);
+}
+
+.artist-card {
+	background-color: var(--card-color-dark);
 }
 
 .playlist-card:hover,
