--- a/src/views/player.ejs
+++ b/src/views/player.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/homepage.css">
+<link rel="stylesheet" href="/css/player.css">
 <div class="footer-player">
     <div class="current-song">Listening on ASUS-ROG...</div>
         <audio controls>
