re-design the container layout

--- a/src/views/container.ejs
+++ b/src/views/container.ejs
@@ -8,17 +8,22 @@
 </head>
 <body>
     <div id="container">
-        <!-- Thanh điều hướng (navbar) -->
-        <nav>
-            <%- include('navbar') %>
-        </nav>
-        <!-- Nội dung gồm sidebar và content để load -->
-        <div id="main-page">
+        <div id="left-container">
             <%- include('sidebar') %>
-            <div id="content">
-                <%- include(view) %> <!-- Nội dung thay đổi trong đây -->
+        </div>
+        <!-- Nội dung gồm sidebar và content để load -->
+        <div id="right-container">
+            <!-- Thanh điều hướng (navbar) -->
+            <nav>
+                <%- include('navbar') %>
+            </nav>
+            <div id="main-page">
+                <div id="content">
+                    <%- include(view) %> <!-- Nội dung thay đổi trong đây -->
+                </div>
             </div>
         </div>
+        
         <!-- Phần thanh progres nhạc -->
         <div id="music-player">
             <%- include('player') %>
