move logo to sidebar

--- a/src/views/navbar.ejs
+++ b/src/views/navbar.ejs
@@ -1,6 +1,9 @@
 <link rel="stylesheet" href="/css/navbar.css">
 <div id="navbar">
     <div class="navbar-left">
+        <div class="logo">
+            <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
+        </div>
         <div class="navbar-buttons">
             <button class="nav-button" onclick="window.location.href='./index.html'">
                 <i class="bi bi-arrow-left-circle"></i>
