--- a/src/views/sidebar.ejs
+++ b/src/views/sidebar.ejs
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="/css/sidebar.css">
+<div class="logo">
+    <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
+</div>
 <aside>
     <ul id="sidebar">
         <li><a href="#">Side 1</a></li>
