--- a/src/public/css/sidebar.css
+++ b/src/public/css/sidebar.css
@@ -1,10 +1,20 @@
-ul#sidebar {
+#sidebar {
 	display: flex;
 	flex-direction: column;
+	background-color: var(--sidebar-bg);
+	height: 100%;
+	box-shadow: 3px 0px 36px 3px rgba(0, 0, 0, 1);
+	position: absolute;
+	z-index: 2;
+}
+#sidebar ul {
 	padding: 0;
 }
-ul#sidebar > li {
+#sidebar li {
 	list-style-type: none;
 	padding-bottom: 20px;
-	border: 1px dotted green;
+}
+#sidebar a {
+	text-decoration: none;
+	color: var(--main-text-color);
 }
