--- a/src/public/css/sidebar.css
+++ b/src/public/css/sidebar.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	background-color: var(--sidebar-bg);
 	height: 100%;
-	box-shadow: 3px 0px 36px 3px rgba(0, 0, 0, 1);
+	box-shadow: 4px 0px 8px rgba(0, 0, 0, 0.1);
 	position: absolute;
 	z-index: 2;
 }
