update sidebar lists

--- a/src/views/sidebar.ejs
+++ b/src/views/sidebar.ejs
@@ -1,13 +1,17 @@
 <link rel="stylesheet" href="/css/sidebar.css">
-<div class="logo">
-    <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
-</div>
-<aside>
-    <ul id="sidebar">
-        <li><a href="#">Side 1</a></li>
-        <li><a href="#">Side 2</a></li>
-        <li><a href="#">Side 3</a></li>
-        <li><a href="#">Side 4</a></li>
-        <li><a href="#">Side 5</a></li>
+<aside id="sidebar">
+    <div class="logo">
+        <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
+    </div>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="#">Search</a></li>
+        <li><a href="#">Library</a></li>
     </ul>
+    <ul>
+        <li><a href="#">Create Playlist</a></li>
+        <li><a href="#">Liked Songs</a></li>
+        <li><a href="#">Your Episodes</a></li>
+    </ul>
+    <ul></ul>
 </aside>
