--- a/src/public/css/sidebar.css
+++ b/src/public/css/sidebar.css
@@ -6,7 +6,13 @@
 	box-shadow: 4px 0px 8px rgba(0, 0, 0, 0.1);
 	position: absolute;
 	z-index: 2;
+	width: inherit;
 }
+
+#sidebar .logo {
+	background-color: #334854;
+}
+
 #sidebar ul {
 	padding: 0;
 }
@@ -17,4 +23,11 @@
 #sidebar a {
 	text-decoration: none;
 	color: var(--main-text-color);
+	font-size: 20px;
+	font-weight: lighter;
+	padding-left: 20px;
+}
+
+#sidebar a i {
+	margin-right: 10px;
 }
