--- a/src/views/sidebar.ejs
+++ b/src/views/sidebar.ejs
@@ -4,14 +4,14 @@
         <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
     </div>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="#">Search</a></li>
-        <li><a href="#">Library</a></li>
+        <li><a href="/"><i class="bi bi-house-door-fill"></i>Home</a></li>
+        <li><a href="#"><i class="bi bi-search"></i>Search</a></li>
+        <li><a href="#"><i class="bi bi-collection-play-fill"></i>Library</a></li>
     </ul>
     <ul>
-        <li><a href="#">Create Playlist</a></li>
-        <li><a href="#">Liked Songs</a></li>
-        <li><a href="#">Your Episodes</a></li>
+        <li><a href="#"><i class="bi bi-plus-square-fill"></i>Create Playlist</a></li>
+        <li><a href="#"><i class="bi bi-chat-square-heart-fill"></i></i>Liked Songs</a></li>
+        <li><a href="#"><i class="bi bi-wifi"></i>Your Episodes</a></li>
     </ul>
     <ul></ul>
 </aside>
