add some sample href

--- a/src/views/sidebar.ejs
+++ b/src/views/sidebar.ejs
@@ -10,7 +10,7 @@
     </ul>
     <ul>
         <li><a href="#"><i class="bi bi-plus-square-fill"></i>Create Playlist</a></li>
-        <li><a href="#"><i class="bi bi-chat-square-heart-fill"></i></i>Liked Songs</a></li>
+        <li><a href="/tracks"><i class="bi bi-chat-square-heart-fill"></i></i>Liked Songs</a></li>
         <li><a href="#"><i class="bi bi-wifi"></i>Your Episodes</a></li>
     </ul>
     <ul></ul>
