--- a/src/views/sidebar.ejs
+++ b/src/views/sidebar.ejs
@@ -4,14 +4,16 @@
         <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
     </div>
     <ul>
-        <li><a href="/" active><i class="bi bi-house-door-fill"></i>Home</a></li>
-        <li><a href="#"><i class="bi bi-search"></i>Search</a></li>
-        <li><a href="#"><i class="bi bi-collection-play-fill"></i>Library</a></li>
+        <li><a href="/" class="side-link" active><i class="bi bi-house-door-fill"></i>Home</a></li>
+        <li><a href="#" class="side-link"><i class="bi bi-search"></i>Search</a></li>
+        <li><a href="#" class="side-link"><i class="bi bi-collection-play-fill"></i>Library</a></li>
     </ul>
     <ul>
-        <li><a href="#"><i class="bi bi-plus-square-fill"></i>Create Playlist</a></li>
-        <li><a href="/tracks"><i class="bi bi-chat-square-heart-fill"></i></i>Liked Songs</a></li>
-        <li><a href="#"><i class="bi bi-wifi"></i>Your Episodes</a></li>
+        <li><a href="#" class="side-link"><i class="bi bi-plus-square-fill"></i>Create Playlist</a></li>
+        <li><a href="/tracks" class="side-link"><i class="bi bi-chat-square-heart-fill"></i></i>Liked Songs</a></li>
+        <li><a href="#" class="side-link"><i class="bi bi-wifi"></i>Your Episodes</a></li>
     </ul>
-    <ul></ul>
+    <ul>
+
+    </ul>
 </aside>
