Adding link to artist tab

--- a/src/views/sidebar.ejs
+++ b/src/views/sidebar.ejs
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="#" class="side-link"><i class="bi bi-plus-square-fill"></i>Create Playlist</a></li>
         <li><a href="/tracks" class="side-link"><i class="bi bi-chat-square-heart-fill"></i></i>Liked Songs</a></li>
-        <li><a href="#" class="side-link"><i class="bi bi-wifi"></i>Your Episodes</a></li>
+        <li><a href="/artists" class="side-link"><i class="bi bi-wifi"></i>Artists</a></li>
     </ul>
     <ul>
 
