--- a/src/views/tracks.ejs
+++ b/src/views/tracks.ejs
@@ -1,1 +1,9 @@
-<h1>This page shows tracks.</h1>
+<!-- views/tracks.ejs -->
+<h2>Recommended Tracks</h2>
+<ul>
+    <% tracks.forEach(track => { %>
+        <li><a href="#" onclick="playTrack('<%= track.track_mp3_path %>')">
+                <%= track.track_title %> - <%= track.artist_name %>
+            </a></li>
+        <% }) %>
+</ul>
