--- a/src/views/player.ejs
+++ b/src/views/player.ejs
@@ -5,8 +5,18 @@
             <source src="/music/sample.mp3" type="audio/mp3">
         </audio>
     <div class="player-controls">
-        <button>Play</button>
-        <button>Pause</button>
+        <button onclick="playAudio()">Play</button>
+        <button onclick="pauseAudio()">Pause</button>
         <button>Next</button>
     </div>
 </div>
+
+<script>
+    function playAudio() {
+        document.querySelector('.footer-player audio').play();
+    }
+
+    function pauseAudio() {
+        document.querySelector('.footer-player audio').pause();
+    }
+</script>
